「募集中のスポンサー」を更新

--- a/css/sponsorship.css
+++ b/css/sponsorship.css
@@ -29,6 +29,11 @@
     margin: 5px 0;
 }
 
+.sponsorship-section li ul {
+    margin: 5px 0 20px 0;
+}
+
+
 .sponsorship-section .domain::before {
     content: '@';
 }
