og:titleをsite.titleから取得するように変更

--- a/_layouts/homepage_article.html
+++ b/_layouts/homepage_article.html
@@ -9,7 +9,7 @@
   <meta name="keyword" content="TakizawaHachathon,滝沢ハッカソン,ハッカソン,岩手IT,学生">
   <meta name=”description” content=”Takizawa Hackathonは岩手の学生が主役のハッカソンコミュニティです。” />
 
-  <meta property="og:title" content="{% if page.pagetitle %}{{ page.pagetitle }}{% else %}{{ page.title }}{% endif %} | Takizawa Hackathon // 滝沢市のハッカソンコミュニティ" />
+  <meta property="og:title" content="{% if page.pagetitle %}{{ page.pagetitle }}{% else %}{{ page.title }}{% endif %} | {{ site.title }}" />
   <meta property="og:description" content="Takizawa Hackathonは岩手の学生が主役のハッカソンコミュニティです。" />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
