フッター部分を別のHTMLファイルに分割し、共通テンプレート化しました

--- a/_layouts/homepage_article.html
+++ b/_layouts/homepage_article.html
@@ -95,23 +95,7 @@
 
     {{ content }}
 
-    <footer class="footer">
-      <div class="container-fluid">
-        <div class="links-section">
-            <a href="/privacy/">プライバシーポリシー</a>
-          </div>
-          <!-- .links-section -->
-          <div class="copyright-section">
-            <div class="copytext">
-              &copy; <span id="copyright-year"></span> 滝沢ハッカソン運営委員会 | Design by <a href="https://uicookies.com">uiCookies</a> and modify by <a
-                href="https://github.com/rkonno">rkonno</a>
-            </div>
-          </div>
-          <!-- .copyright-section -->
-        </div>
-      </div>
-    </footer>
-    <!-- .footer -->
+    {% include footer.html %}
 
   </div>
   <!-- #main-wrapper -->
