--- a/_includes/timeline_event.html
+++ b/_includes/timeline_event.html
@@ -1,7 +1,7 @@
 <label class="timeline-event-icon"></label>
 <div class="timeline-event-copy">
   <p class="timeline-event-thumbnail">{{ page.date | date: "%Y/%m/%d" }}</p>
-  <h3>Takizawa Hackathon ver.{{ page.event_version }}を開催</h3>
+  <h3>{{ page.event_title }}</h3>
   <h4>{{ page.event_desctiption }}</h4>
   <div class="time-line-info-list">
     <ul>
