--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,8 +20,8 @@
       <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
         <ul class="nav navbar-nav">
           <li><a href="/#section-faq-position">初めて参加される方へ</a></li>
-          <li><a href="/sponsorship/">スポンサー募集</a>
-          <li>
+          <li><a href="/sponsorship/">スポンサー募集</a></li>
+          <li><a href="/sponsorevents/">スポンサーイベント</a></li>
           <li><a href="/about/">ABOUT</a></li>
           <li><a href="/team/">TEAM</a></li>
         </ul>
