modify sponsor events page

--- a/_includes/sponsor_event.html
+++ b/_includes/sponsor_event.html
@@ -10,11 +10,11 @@
         開催日: {{ page.event_date }}</br>
         対象: {{ page.target }}</br>
         募集終了日: {{ page.entry_end_date }}</br>
-        <!-- TODO: styleを当てる -->
-        <div class="entry-btn center-block">
-          <a href="{{ page.form_url }}"
-            class="btn btn-default btn-shadow wf-notosansjapanese" target="_blank">参加申し込みをする</a>
-        </div>
+      </div>
+
+      <div class="entry-btn">
+        <a href="{{ page.form_url }}" class="btn btn-default btn-shadow wf-notosansjapanese"
+          target="_blank">参加申し込みをする</a>
       </div>
     </div>
   </div>
