--- a/_includes/sponsor_event.html
+++ b/_includes/sponsor_event.html
@@ -4,8 +4,11 @@
       <div class="section-titles">
         <h3>{{ page.event_name }}</h3>
         <p class="sub-title">
-          {% if page.author %} {{ page.author }}様主催 {% elseif page.sponsored
-          %} {{ page.author }}様協賛 {% endif %}
+          {% if page.author %}
+          {{ page.author }}様主催
+          {% elsif page.sponsored %}
+          {{ page.sponsored }}様協賛
+          {% endif %}
         </p>
       </div>
 
@@ -21,19 +24,9 @@
           募集終了日: {{ page.entry_end_date | date: "%Y/%m/%d(%a)" }}<br />
         </div>
 
-        {% if page.sponsored %}
-        <a href="{{ page.member_x }}" target="_blank" class="at-user__sns-item">
-          <img src="/img/logo_x.png" class="at-user__sns-item_x" />
-        </a>
-        {% endif %}
-
         <div class="entry-btn">
-          <a
-            href="{{ page.form_url }}"
-            class="btn btn-default btn-shadow wf-notosansjapanese"
-            target="_blank"
-            >参加申し込みをする</a
-          >
+          <a href="{{ page.form_url }}" class="btn btn-default btn-shadow wf-notosansjapanese"
+            target="_blank">参加申し込みをする</a>
         </div>
       </div>
     </div>
