--- a/_layouts/homepage_article.html
+++ b/_layouts/homepage_article.html
@@ -135,6 +135,8 @@
   <script type="text/javascript" src="/js/particles.min.js"></script>
 
   <script type="text/javascript" src="/js/simple_page_scripts.js"></script>
+
+  <script type="text/javascript" src="/js/scheduled-hide-events.js"></script>
 </body>
 
 </html>
