--- a/css/style.css
+++ b/css/style.css
@@ -439,10 +439,10 @@ button:focus, .btn:focus, .btn:active:focus {
 }
 
 .orig-jumbotron .content .event-date {
-    width: 300px;
-    height: 28px;
+    width: 310px;
+    height: 86px;
     margin: 10px 0 16px 6px;
-    background-image: url(../img/event-date-ver7.svg);
+    background-image: url(../img/event-date-ver7-reschedule.svg);
     background-size: 100%;
     background-repeat: no-repeat;
 }
