Update event details for Takizawa Hackathon Ver.8, including new dates, theme, and registration deadline. Add new SVG for event date and adjust countdown target date. Modify HTML to reflect updated information and ensure dynamic content rendering.

--- a/css/top.css
+++ b/css/top.css
@@ -294,6 +294,12 @@
   position: relative;
 }
 
+.caption {
+  font-size: 0.8em;
+  color: #737373;
+  font-weight: 300;
+  line-height: 0.2em;
+}
 
 /* --------------------------
  * スポンサー／会場提供
